  - Von Neumann topology (Kennedy 2002)
* Feature: Ability to solve problems with discrete parameters
* Feature: New convergence criterion: isothermal equilibrium (Mikki 2008, Chapter 3).
* Feature: Clerc's method: constriction factor chi to prevent explosive divergence of swarm.
* Feature: Swarm coherence and collision-avoidance parameters?

ver 20130430
* Bug fix: corrected typo in PSOCHECKPOPULATIONINITRANGE which was causing incorrect handling of initial particle distribution boundaries. Thanks to Erik from the MATLAB Central community.

ver 20131220
* Performance improvement: Added parallel computing capability to constraint violation calculations for "penalize" method.
* Performance improvement: Optimized and refactored code for calculating constraint violations for "penalize" method.
* Performance improvement: Added parallel computing capability for determining constraint violations for "soft" method.
* Minor bugfix: in psoboundspenalize, code for applying tolerances to equality constraints will now properly execute after checking for existence of equality constraints.

ver 20130702:
* Bug fix: multiple errors in variable name when checking for verbosity before warnings were thrown -- did not properly specify the options structure array. Thanks to Christian Hansen of the University of Hannover for pointing this out.
* Documentation updated for PSOOPTIMSET function.

ver 20130615:
* Added parallel computing capability. Once the distributed computing worker pool has been appropriately set up using MATLABPOOL, run PSO with options.UseParallel set to 'always'. If both Vectorized and UseParallel options are set to 'on' and 'always', respectively, then the vectorized option will override the parallel option. If PSO is unable to find an installed version of the Parallel Computing Toolbox, then the problem will quietly switch to serial computation. Thanks to Michael Johnston and J. Oliver for their suggestions and code contributions.