@@ -16,6 +16,10 @@ Future plans (in no particular order):
 * Feature: Clerc's method: constriction factor chi to prevent explosive divergence of swarm.
 * Feature: Swarm coherence and collision-avoidance parameters?
 
+ver UNSTABLE
+* Bug fix: added appropriate "end" lines to nested functions in PSOITERATE (contributed by unknown user via Google Code)
+* Update: MATLABPOOL has been deprecated in recent versions of MATLAB. Updated distributed computing code as appropriate.
+
 ver 20130430
 * Bug fix: corrected typo in PSOCHECKPOPULATIONINITRANGE which was causing incorrect handling of initial particle distribution boundaries. Thanks to Erik from the MATLAB Central community.
 
